--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "@mui/material": "^5.4.3",
+    "@mui/x-data-grid-generator": "^5.5.1",
     "bcrypt": "^5.0.1",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
